================================================================================
This file describes changes made to the PTCLM tool
================================================================================        
Originator: erik
Date: May/29/2013
Tag: PTCLM1_130529
cesm_baseline:  scripts4_130529
One-line:  Get PTCLM working with the new CLM tools
Testing: Limited, test mexicocity, and 1x1_US-UMB basic case setup

M   PTCLM.py ------- Remove spinup options, get working with new tools
M   testcases.csh -- Remove spinup tests, get working again

================================================================================        
Originator: erik
Date: Feb/16/2013
Tag: PTCLM1_130216
cesm_baseline:  scripts4_130130
One-line:  Get supported compsets working and some progress with tools
Testing: Limited -- but surported res work on ys

M       PTCLM.py
M       testcases.csh

================================================================================        
Originator: erik
Date: Jan/30/2013
Tag: PTCLM1_130130
cesm_baseline:  scripts4_130130
One-line:  Initial changes to get PTCLM working with new scripts and tools
Testing: Limited testing

Initial add of yellowstone to testcases and switch frankfurt for edinburgh.
Remove generic stuff for userdefined. Remove ndep/aer grid.

M       PTCLM.py
M       testcases.csh
D       usr_files/mkdatadomain.TEMPLATE

================================================================================        
Originator: erik
Date: Jan/11/2013
Tag: PTCLM1_130111
cesm_baseline:  scripts4_120125
One-line:  Add some new sitedata from Keith Oleson
Testing: none

A       PTCLM_sitedata/LBA_pftdata.txt
M       PTCLM_sitedata/Fluxnet-Canada_sitedata.txt
M       PTCLM_sitedata/EXAMPLE_sitedata.txt
A       PTCLM_sitedata/CarboEurope_pftdata.txt
M       PTCLM_sitedata/AmeriFlux_sitedata.txt
M       PTCLM_sitedata/Fluxnet-Canada_soildata.txt
M       PTCLM_sitedata/EXAMPLE_soildata.txt
M       PTCLM_sitedata/AmeriFlux_soildata.txt